<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/call"
        android:icon="@drawable/call"
        android:title="@string/call">
        <menu>
            <item
                android:id="@+id/room1"
                android:icon="@drawable/call"
                android:title="@string/room1"/>
            <item
                android:id="@+id/room2"
                android:icon="@drawable/call"
                android:title="@string/room2"/>
            <item
                android:id="@+id/room3"
                android:icon="@drawable/call"
                android:title="@string/room3"/>
            <item
                android:id="@+id/room4"
                android:icon="@drawable/call"
                android:title="@string/room4"/>
        </menu>
    </item>
    <item
        android:id="@+id/endcall"
        android:icon="@drawable/stop"
        android:title="@string/endcall"/>
    <item
        android:id="@+id/quit"
        android:icon="@drawable/stop"
        android:title="@string/quit"/>

</menu>
